Calculator window working with the item picker, number input and hidden recipies checkbox.

--- a/locale/en/en.cfg
+++ b/locale/en/en.cfg
@@ -8,4 +8,9 @@ calculator-description=Calculate the resources and machines needed for your prod
 open-calculator-button=Open Calculator
 open-calculator-button-tooltip=Click to open the production calculator.
 calculator-frame-title=Production Calculator
+calculator-item-picker-label=Select an item and production rate.
+calculator-item-picker-placeholder=Choose an item... 
+calculator-number-input-label=
+calculator-number-input-placeholder=Enter number per second
+calculator-exclude-undiscovered-recipes-checkbox-label=Exclude undiscovered recipes
 calculator-confirm-button=Confirm
