Add global variables and GUI options for calculator modes
- Initialize global variables for compact mode, raw ingredients mode, and tree mode.
- Update GUI to include checkboxes and dropdown for selecting modes.
- Modify recipe tree display logic to accommodate new modes.
- Enhance localization for additional options in the GUI.

--- a/locale/en/en.cfg
+++ b/locale/en/en.cfg
@@ -8,9 +8,20 @@ calculator-description=Calculate the resources and machines needed for your prod
 open-calculator-button=Open Calculator
 open-calculator-button-tooltip=Click to open the production calculator.
 calculator-frame-title=Production Calculator
-calculator-item-picker-label=Select an item and production rate.
+calculator-item-picker-label=Select an item and production rate:
 calculator-item-picker-placeholder=Choose an item... 
 calculator-number-input-label=
 calculator-number-input-placeholder=Enter number per second
+
+calculator-aditional-options-label=Additional options:
 calculator-exclude-undiscovered-recipes-checkbox-label=Exclude undiscovered recipes
+calculator-compact-mode-label=Compact mode
+calculator-raw_ingredients-mode-label=Show raw ingredients
+calculator-calculator-dropdown-tree-mode-text=Text
+calculator-calculator-dropdown-tree-mode-graphical=Graphical
 calculator-confirm-button=Confirm
+[gui-tree]
+production-rate-label-long=Prod. rate
+production-rate-label-short=Pr
+machines-amount-label-long=Machines
+machines-amount-label-short=M
