Add new settings for excluding undiscovered recipes and modes in the calculator

--- a/locale/en/en.cfg
+++ b/locale/en/en.cfg
@@ -25,3 +25,8 @@ production-rate-label-long=Prod. rate
 production-rate-label-short=Pr
 machines-amount-label-long=Machines
 machines-amount-label-short=M
+[mod-setting-name]
+calculator-exclude-undiscovered-recipes=Exclude Undiscovered Recipes
+calculator-compact-mode=Compact Mode
+calculator-raw-ingredients-mode=Show Raw Ingredients
+calculator-calculator-dropdown-tree-mode=Tree Mode
