Add machine pickers for assembler, furnace, and drill in the GUI and update calculation logic

--- a/locale/en/en.cfg
+++ b/locale/en/en.cfg
@@ -13,6 +13,11 @@ calculator-item-picker-placeholder=Choose an item...
 calculator-number-input-label=
 calculator-number-input-placeholder=Enter number per second
 
+calculator-machine-pickers-label=Used machines:
+calculator-assembler-picker-label= Assembling Machine
+calculator-furnace-picker-label= Furnace
+calculator-drill-picker-label= Drill
+
 calculator-aditional-options-label=Additional options:
 calculator-exclude-undiscovered-recipes-checkbox-label=Exclude undiscovered recipes
 calculator-compact-mode-label=Compact mode
