--- a/locale/en/en.cfg
+++ b/locale/en/en.cfg
@@ -7,6 +7,7 @@ calculator-title=Production Calculator
 calculator-description=Calculate the resources and machines needed for your production lines.
 open-calculator-button=Open Calculator
 open-calculator-button-tooltip=Click to open the production calculator.
+calculator-fullscreen-button-tooltip=Switch fullscreen mode
 calculator-frame-title=Production Calculator
 calculator-item-picker-label=Select an item and production rate:
 calculator-item-picker-placeholder=Choose an item... 
